[package]
name = "pi-digits"
version = "0.1.0"
authors = ["ElGusanitoPLAY <nyagouno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
[dependencies.sdl2]
version = "*"
default-features = false
features = ["gfx"]
